# hodlchain

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/hodl-core/: Cargo.toml
crates/hodl-core/src/: address.rs  block.rs  config.rs  consensus.rs  hash.rs  l1.rs  lib.rs  op_return.rs  proof.rs  rpc.rs  schemas.rs  smt.rs  state.rs  tx.rs  witness.rs
crates/hodl-desktop/: Cargo.toml  README.md  tauri.conf.json
crates/hodl-desktop/capabilities/: default.json
crates/hodl-desktop/src/: commands.rs  lib.rs  main.rs  state.rs
crates/hodl-desktop/ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/hodl-desktop/ui/src/: App.svelte  app.css  main.ts
crates/hodl-desktop/ui/src/lib/: address.ts  api.ts  consensus.ts  state.svelte.ts  types.ts
crates/hodl-desktop/ui/src/lib/components/: AddressBox.svelte
crates/hodl-desktop/ui/src/views/: BlockchainOverview.svelte  Dashboard.svelte  History.svelte  Mint.svelte  Reclaim.svelte  Setup.svelte  Transfer.svelte  WalletPicker.svelte
crates/hodl-node/: Cargo.toml
crates/hodl-node/src/: api.rs  bitcoind.rs  config.rs  follower.rs  main.rs  seq_client.rs  shared.rs  store.rs
crates/hodl-regtest/: Cargo.toml
crates/hodl-regtest/src/: btc.rs  daemons.rs  main.rs  paths.rs  procs.rs
crates/hodl-sequencer/: Cargo.toml
crates/hodl-sequencer/src/: api.rs  bitcoind.rs  config.rs  main.rs  producer.rs  shared.rs  store.rs
crates/hodl-wallet/: Cargo.toml
crates/hodl-wallet/src/: api.rs  bitcoind.rs  encryption.rs  esplora.rs  lib.rs  main.rs  ops.rs  reclaim.rs  verify.rs  wallet.rs  wallets.rs
crates/hodl-wallet/tests/: reclaim_regtest.rs
crates/hodl-zk-host/: Cargo.toml
crates/hodl-zk-host/src/: main.rs
crates/hodl-zk-program/: Cargo.toml
crates/hodl-zk-program/src/: main.rs
docs/: build-from-source.md  cadence-and-fees-plan.md  design.md  issuance.tex  issuancev2.tex  issuancev3.aux  issuancev3.out  issuancev3.tex  privacy-plan.md  release.md  run-the-gui.md  zk-design-discussion.md
scripts/: rebuild-test.sh  regtest-demo.sh
sim/: README.md  run.py  scenarios.py
sim/hodl-simulate/: Cargo.toml
sim/hodl-simulate/src/: main.rs
