[package]
name = "hodl-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "hodl-wallet"
path = "src/main.rs"

[dependencies]
hodl-core = { workspace = true }
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bip39 = { workspace = true }
