[package]
name = "hodl-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "hodl-wallet"
path = "src/main.rs"

[dependencies]
hodl-core = { workspace = true }
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bip39 = { workspace = true }
# Optional wallet encryption (plan H3). Argon2id KDF over the
# user-chosen passphrase, XChaCha20-Poly1305 AEAD over the BIP39
# mnemonic. base64 for the on-disk JSON blob; zeroize to drop key
# material from memory; rpassword for the CLI passphrase prompt.
argon2 = "0.5"
chacha20poly1305 = "0.10"
base64 = "0.22"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
rpassword = "7"

[dev-dependencies]
tempfile = "3"
