[package]
name = "hodl-simulate"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "hodl-simulate"
path = "src/main.rs"

[dependencies]
hodl-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
